--- a/index.html
+++ b/index.html
@@ -9,50 +9,54 @@
   <body>
     <div id="exercise1">
       <!-- Complete Exercise 1 HERE -->
+      <h1>Autif Kamal</h1>
+      <p>I have developed websites professionally for 4 years. Now, I'm trying to transition into software development and ideally, game development.</p>
     </div>
 
     <div id="exercise2">
       <!-- Complete Exercise 2 HERE -->
+      <ul>
+        <li><a href="https://www.linkedin.com/in/autif-kamal/">LinkedIn</a></li>
+        <li><a href="https://truecoders.io/">TrueCoders Homepage</a></li>
+        <li><a href="https://www.twitch.tv">Most Visited Website</a></li>
+      </ul>
     </div>
 
     <div id="exercise3">
       <!-- Complete Exercise 3 HERE -->
+      <img src="./images/example.png" alt="Example image" />
     </div>
 
     <div id="exercise4">
       <!-- Complete Exercise 4 HERE -->
       <p>
-        I looked down at the board. "The point isn't to win?" I asked. "The
-        point," Bredon said grandly, "is to play a beautiful game." He lifted
+        I looked down at the board. "The <strong>point</strong> isn't to win?" I asked. "The
+        <strong>point</strong>," <span>Bredon</span> said grandly, "is to <u>play</u> a <em>beautiful</em> game." He lifted
         his hands and shrugged, his face breaking into a beautific smile. "Why
-        would I want to win anything other than a beautiful game?"
+        would I want to win anything other than a <em>beautiful</em> game?"
       </p>
     </div>
 
-    <div id="exercise5">
+    <main id="exercise5">
       <!-- Complete Exercise 5 HERE -->
-      <div>
-        <div>
-          <div>
-            <span>
-              <a href="/">Home</a>
-            </span>
-            <span>
-              <a href="/about">About</a>
-            </span>
-            <span>
-              <a href="/projects">Projects</a>
-            </span>
-          </div>
-        </div>
-      </div>
+      <section>
+        <header>
+          <nav>
+            <ul>
+              <li><a href="/">Home</a></li>
+              <li><a href="/about">About</a></li>
+              <li><a href="/projects">Projects</a></li>
+            </ul>
+          </nav>
+        </header>
+      </section>
 
-      <div>
+      <section>
         <div>
           <h1>Main Heading</h1>
           <p>Author.. Bio...</p>
         </div>
-        <div>
+        <article>
           <div>
             <h2>Sub Heading</h2>
             <div>
@@ -67,27 +71,27 @@
               <p>Lorem ipsum...</p>
             </div>
           </div>
-        </div>
-	</div>
+        </article>
+	   </section>
 
-      <div>
-        <div>
-          <div>
-            <span>
+      <section>
+        <nav>
+          <ul>
+            <li>
               <a href="/privacy">Privacy Policy</a>
-            </span>
-            <span>
+            </li>
+            <li>
               <a href="/terms">Terms and Conditions</a>
-            </span>
-          </div>
-        </div>
+            </li>
+          </ul>
+        </nav>
 
-        <div>
+        <footer>
           <p>Powered by 🕯️</p>
           <p>&copy; TrueCoders 2021-24</p>
-        </div>
-      </div>
-    </div>
+        </footer>
+      </section>
+    </main>
 	
   </body>
 </html>
